// storage gateway rpc request/response

syntax = "proto3";

option objc_class_prefix = "DRS"; 
package huawei.proto;

enum JOURNAL_STATUS {
    CREATED = 0; // journal file is created but not used yet
    OPENED = 1;  // journal file is opened for producer to write
    SEALED = 2;  // read only for cosumers
}
// each volume's journal keys and their metadatas
// the key's format is "/journals/vol_id/N", where N is the global incremental 
// sequence number for a volume
message JournalMeta {
    // journal file name
    string path = 1;
    JOURNAL_STATUS status = 2 ;
}
message JournalMarker {
    // the latest journal file in consumed files
    string cur_journal = 1;
    uint64 pos = 2 ;
}
message JournalElement {
    string journal = 1;
    // start offset
    uint64 start_offset = 2;
    // end offset of valid data
    uint64 end_offset = 3;
}
